finished user section

--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
         <!-- sidenav -->
         <div id="mySidenav" class="sidenav">
             <div class="profile">
-                <input type="button" value="Sign Up">
-                <input type="button" value="Sign In">
+                <a href="./components/Login/index.html">
+                    <input type="button" value="Sign Up">
+                    <input type="button" value="Sign In">
+                </a>
             </div>
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">Vendors</a>
-            <a href="#">Orders</a>
-            <a href="#">Account</a>
-            <a href="#">Logout</a>
+            <a href="./components/Restaurants/index.html">Vendors</a>
+            <a href="./components/Orders/index.html">Orders</a>
+            <a href="./components/Account/index.html">Account</a>
+            <a href="index.html">Logout</a>
         </div>
         <!-- nav -->
         <div class="header">
             <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
             <span>Rush <b>Foods</b></span>
-            <input type="button" value="Sign Up">
-            <input type="button" value="Sign In">
+            <a href="./components/Login/index.html"><input type="button" value="Sign Up"></a>
+            <a href="./components/Login/index.html"><input type="button" value="Sign In"></a>
         </div>
         <!-- order section -->
         <div class="order">
@@ -49,7 +51,7 @@
                     </div>
                 </div>
                 <div class="search">
-                    <input type="button" value="Make Order">
+                    <a href="./components/Restaurants/index.html"><input type="button" value="Make Order"></a>
 
                 </div>
             </div>
@@ -61,7 +63,7 @@
             <img src="./assets/restaurant.jpg" alt="Avatar" style="width: 100%;" />
             <div class="container">
                 <h4><b>Your Restaurant, Elevated</b></h4>
-                <p><a href="#">Add your restaurant</a>
+                <p><a href="./Merchants/Login/index.html">Add your restaurant</a>
                 </p>
             </div>
         </div>
