--- a/Merchants/Login/index.html
+++ b/Merchants/Login/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image" href="../../assets/favicon.ico" />
+    <link rel="icon" type="image" href="../../assets/Rush.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rush | Fast Online Food Delivery</title>
@@ -24,10 +24,10 @@
                 </a>
             </div>
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="../Restaurants/index.html">Vendors</a>
-            <a href="../Orders/index.html">Orders</a>
-            <a href="../Account/index.html">Account</a>
-            <a href="../../index.html">Logout</a>
+            <a href="../../../Merchants/index.html">Home</a>
+            <a href="../../../Merchants/Orders/index.html">Orders</a>
+            <a href="../../../Merchants/Menu maker Dashboard/Breakfast/index.html">Menu</a>
+            <a href="../../../index.html">Logout</a>
         </div>
         <!-- nav -->
         <div class="header">
