--- a/Merchants/Restaurant Registration/index.html
+++ b/Merchants/Restaurant Registration/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image" href="../../assets/favicon.ico" />
+    <link rel="icon" type="image" href="../../assets/Rush.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rush | Fast Online Food Delivery</title>
