--- a/Merchants/index.html
+++ b/Merchants/index.html
@@ -73,10 +73,7 @@
             <p>Our comprehensive guide explains how to create and update the menu at your restaurant step by step. See our video.</p>
         </div>
         <div class="image">
-            <video width="100%" height="100%" loop autoplay muted>
-                <source src="../assets/video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-              </video>
+            <div style="width:100%;height:0px;position:relative;padding-bottom:56.250%;"><iframe src="https://streamable.com/e/plnwvh" frameborder="0" width="100%" height="100%" allowfullscreen style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden;"></iframe></div>
         </div>
     
     </div>
